// Copyright 2020 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cv.internal.gerrit.poller;

option go_package = "go.chromium.org/luci/cv/internal/gerrit/poller;poller";

import "google/protobuf/timestamp.proto";

// PollGerritTask performs next poll for a given LUCI Project.
//
// Queue: "poll-gerrit".
message PollGerritTask {
  string luci_project = 1;
  // eta is when this task is supposed to run.
  google.protobuf.Timestamp eta = 2;
}
